--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
         }],
         "complexity": ["error", 5],
         "max-classes-per-file": ["error", 1],
-        "no-unused-vars": "warn",
+        // "no-unused-vars": "warn",
         "eqeqeq": ["error", "always"],
         "indent": ["error", 2],
         "linebreak-style": ["error", "unix"],
